src/Parser.output
   0  $accept : %entry% $end

   1  program : declaration_list T_eof

   2  declaration_list : declaration_list declaration
   3                   | declaration

   4  declaration_list_e :
   5                     | declaration_list

   6  declaration : variable_declaration
   7              | function_declaration
   8              | function_definition

   9  variable_declaration : ctype declarator more_declarators_e T_semicolon

  10  more_declarators_e :
  11                     | more_declarators_e T_comma declarator
  12                     | T_comma declarator

  13  ctype : basic_type pointer_asterisk_e

  14  pointer_asterisk_e :
  15                     | pointer_asterisk_e T_times

  16  basic_type : T_int
  17             | T_bool
  18             | T_char
  19             | T_double

  20  declarator : T_id T_lbrack constant_expression T_rbrack
  21             | T_id

  22  function_declaration : result_type T_id T_lparen parameter_list_e T_rparen T_semicolon

  23  result_type : ctype
  24              | T_void

  25  parameter_list : parameter_list T_comma parameter
  26                 | parameter

  27  parameter : T_byref ctype T_id
  28            | ctype T_id

  29  parameter_list_e :
  30                   | parameter_list

  31  function_definition : result_type T_id T_lparen parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace

  32  statement : expression_e T_semicolon
  33            | T_lbrace statement_list_e T_rbrace
  34            | T_if T_lparen expression T_rparen statement else_part_e
  35            | label_e T_for T_lparen expression_e T_semicolon expression_e T_semicolon expression_e T_rparen statement_e T_semicolon
  36            | T_continue id_e T_semicolon
  37            | T_break id_e T_semicolon
  38            | T_return expression_e T_semicolon

  39  statement_list_e :
  40                   | statement_list_e statement

  41  statement_e :
  42              | statement

  43  else_part_e :
  44              | T_else statement

  45  label_e :
  46          | T_id T_colon

  47  id_e :
  48       | T_id

  49  expression : T_id
  50             | T_lparen expression T_rparen
  51             | T_true
  52             | T_false
  53             | T_null
  54             | T_int_const
  55             | T_char_const
  56             | T_double_const
  57             | T_string
  58             | T_id T_lparen expression_list_e T_rparen
  59             | expression T_lbrack expression T_rbrack
  60             | unary_operator expression
  61             | expression binary_operator expression
  62             | unary_assignment expression
  63             | expression unary_assignment
  64             | expression binary_assignment expression
  65             | T_lparen result_type T_paren expression
  66             | expression T_qmark expression T_colon expression
  67             | T_new result_type array_expr_index_e
  68             | T_delete expression

  69  array_expr_index_e :
  70                     | T_lbrack expression T_rbrack

  71  expression_e :
  72               | expression

  73  expression_list : expression_list T_comma expression
  74                  | expression

  75  expression_list_e :
  76                    | expression_list

  77  constant_expression : expression

  78  unary_operator : T_addr
  79                 | T_times
  80                 | T_plus
  81                 | T_minus
  82                 | T_negate

  83  binary_operator : T_times
  84                  | T_div
  85                  | T_mod
  86                  | T_plus
  87                  | T_minus
  88                  | T_lt
  89                  | T_gt
  90                  | T_lteq
  91                  | T_gteq
  92                  | T_eq
  93                  | T_neq
  94                  | T_and
  95                  | T_or
  96                  | T_comma

  97  unary_assignment : T_incr
  98                   | T_dcr

  99  binary_assignment : T_assign
 100                    | T_mul_assign
 101                    | T_div_assign
 102                    | T_mod_assign
 103                    | T_plu_assign
 104                    | T_min_assign

 105  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (105)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	T_void  shift 7
	.  error

	program  goto 8
	declaration_list  goto 9
	declaration  goto 10
	variable_declaration  goto 11
	ctype  goto 12
	basic_type  goto 13
	function_declaration  goto 14
	result_type  goto 15
	function_definition  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	basic_type : T_int .  (16)

	.  reduce 16


state 4
	basic_type : T_double .  (19)

	.  reduce 19


state 5
	basic_type : T_bool .  (17)

	.  reduce 17


state 6
	basic_type : T_char .  (18)

	.  reduce 18


state 7
	result_type : T_void .  (24)

	.  reduce 24


state 8
	%entry% : '\001' program .  (105)

	.  reduce 105


state 9
	program : declaration_list . T_eof  (1)
	declaration_list : declaration_list . declaration  (2)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	T_void  shift 7
	T_eof  shift 17
	.  error

	declaration  goto 18
	variable_declaration  goto 11
	ctype  goto 12
	basic_type  goto 13
	function_declaration  goto 14
	result_type  goto 15
	function_definition  goto 16


state 10
	declaration_list : declaration .  (3)

	.  reduce 3


state 11
	declaration : variable_declaration .  (6)

	.  reduce 6


12: shift/reduce conflict (shift 19, reduce 23) on T_id
state 12
	variable_declaration : ctype . declarator more_declarators_e T_semicolon  (9)
	result_type : ctype .  (23)

	T_id  shift 19

	declarator  goto 20


state 13
	ctype : basic_type . pointer_asterisk_e  (13)
	pointer_asterisk_e : .  (14)

	.  reduce 14

	pointer_asterisk_e  goto 21


state 14
	declaration : function_declaration .  (7)

	.  reduce 7


state 15
	function_declaration : result_type . T_id T_lparen parameter_list_e T_rparen T_semicolon  (22)
	function_definition : result_type . T_id T_lparen parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace  (31)

	T_id  shift 22
	.  error


state 16
	declaration : function_definition .  (8)

	.  reduce 8


state 17
	program : declaration_list T_eof .  (1)

	.  reduce 1


state 18
	declaration_list : declaration_list declaration .  (2)

	.  reduce 2


state 19
	declarator : T_id . T_lbrack constant_expression T_rbrack  (20)
	declarator : T_id .  (21)

	T_lbrack  shift 23
	T_semicolon  reduce 21
	T_comma  reduce 21


20: shift/reduce conflict (shift 24, reduce 10) on T_comma
state 20
	variable_declaration : ctype declarator . more_declarators_e T_semicolon  (9)
	more_declarators_e : .  (10)

	T_comma  shift 24
	T_semicolon  reduce 10

	more_declarators_e  goto 25


21: shift/reduce conflict (shift 26, reduce 13) on T_times
state 21
	ctype : basic_type pointer_asterisk_e .  (13)
	pointer_asterisk_e : pointer_asterisk_e . T_times  (15)

	T_times  shift 26
	T_id  reduce 13
	T_plu_assign  reduce 13
	T_min_assign  reduce 13
	T_mul_assign  reduce 13
	T_div_assign  reduce 13
	T_mod_assign  reduce 13
	T_assign  reduce 13
	T_incr  reduce 13
	T_dcr  reduce 13
	T_lteq  reduce 13
	T_gteq  reduce 13
	T_gt  reduce 13
	T_lt  reduce 13
	T_neq  reduce 13
	T_eq  reduce 13
	T_lbrack  reduce 13
	T_rbrack  reduce 13
	T_rparen  reduce 13
	T_colon  reduce 13
	T_semicolon  reduce 13
	T_comma  reduce 13
	T_qmark  reduce 13
	T_and  reduce 13
	T_or  reduce 13
	T_plus  reduce 13
	T_minus  reduce 13
	T_paren  reduce 13
	T_mod  reduce 13
	T_div  reduce 13


state 22
	function_declaration : result_type T_id . T_lparen parameter_list_e T_rparen T_semicolon  (22)
	function_definition : result_type T_id . T_lparen parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace  (31)

	T_lparen  shift 27
	.  error


state 23
	declarator : T_id T_lbrack . constant_expression T_rbrack  (20)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 46
	constant_expression  goto 47
	unary_operator  goto 48
	unary_assignment  goto 49


state 24
	more_declarators_e : T_comma . declarator  (12)

	T_id  shift 19
	.  error

	declarator  goto 50


state 25
	variable_declaration : ctype declarator more_declarators_e . T_semicolon  (9)
	more_declarators_e : more_declarators_e . T_comma declarator  (11)

	T_semicolon  shift 51
	T_comma  shift 52
	.  error


state 26
	pointer_asterisk_e : pointer_asterisk_e T_times .  (15)

	.  reduce 15


state 27
	function_declaration : result_type T_id T_lparen . parameter_list_e T_rparen T_semicolon  (22)
	function_definition : result_type T_id T_lparen . parameter_list_e T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace  (31)
	parameter_list_e : .  (29)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	T_byref  shift 53
	T_rparen  reduce 29

	ctype  goto 54
	basic_type  goto 13
	parameter_list  goto 55
	parameter  goto 56
	parameter_list_e  goto 57


state 28
	expression : T_id .  (49)
	expression : T_id . T_lparen expression_list_e T_rparen  (58)

	T_lparen  shift 58
	T_plu_assign  reduce 49
	T_min_assign  reduce 49
	T_mul_assign  reduce 49
	T_div_assign  reduce 49
	T_mod_assign  reduce 49
	T_assign  reduce 49
	T_incr  reduce 49
	T_dcr  reduce 49
	T_lteq  reduce 49
	T_gteq  reduce 49
	T_gt  reduce 49
	T_lt  reduce 49
	T_neq  reduce 49
	T_eq  reduce 49
	T_lbrack  reduce 49
	T_rbrack  reduce 49
	T_rparen  reduce 49
	T_colon  reduce 49
	T_semicolon  reduce 49
	T_comma  reduce 49
	T_qmark  reduce 49
	T_and  reduce 49
	T_or  reduce 49
	T_plus  reduce 49
	T_minus  reduce 49
	T_times  reduce 49
	T_mod  reduce 49
	T_div  reduce 49


state 29
	expression : T_string .  (57)

	.  reduce 57


state 30
	expression : T_char_const .  (55)

	.  reduce 55


state 31
	expression : T_int_const .  (54)

	.  reduce 54


state 32
	expression : T_double_const .  (56)

	.  reduce 56


state 33
	expression : T_true .  (51)

	.  reduce 51


state 34
	expression : T_false .  (52)

	.  reduce 52


state 35
	expression : T_null .  (53)

	.  reduce 53


state 36
	unary_assignment : T_incr .  (97)

	.  reduce 97


state 37
	unary_assignment : T_dcr .  (98)

	.  reduce 98


state 38
	expression : T_lparen . expression T_rparen  (50)
	expression : T_lparen . result_type T_paren expression  (65)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	T_void  shift 7
	.  error

	ctype  goto 59
	basic_type  goto 13
	result_type  goto 60
	expression  goto 61
	unary_operator  goto 48
	unary_assignment  goto 49


state 39
	unary_operator : T_negate .  (82)

	.  reduce 82


state 40
	unary_operator : T_plus .  (80)

	.  reduce 80


state 41
	unary_operator : T_minus .  (81)

	.  reduce 81


state 42
	unary_operator : T_times .  (79)

	.  reduce 79


state 43
	unary_operator : T_addr .  (78)

	.  reduce 78


state 44
	expression : T_new . result_type array_expr_index_e  (67)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	T_void  shift 7
	.  error

	ctype  goto 59
	basic_type  goto 13
	result_type  goto 62


state 45
	expression : T_delete . expression  (68)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 63
	unary_operator  goto 48
	unary_assignment  goto 49


state 46
	expression : expression . T_lbrack expression T_rbrack  (59)
	expression : expression . binary_operator expression  (61)
	expression : expression . unary_assignment  (63)
	expression : expression . binary_assignment expression  (64)
	expression : expression . T_qmark expression T_colon expression  (66)
	constant_expression : expression .  (77)

	T_plu_assign  shift 64
	T_min_assign  shift 65
	T_mul_assign  shift 66
	T_div_assign  shift 67
	T_mod_assign  shift 68
	T_assign  shift 69
	T_incr  shift 36
	T_dcr  shift 37
	T_lteq  shift 70
	T_gteq  shift 71
	T_gt  shift 72
	T_lt  shift 73
	T_neq  shift 74
	T_eq  shift 75
	T_lbrack  shift 76
	T_comma  shift 77
	T_qmark  shift 78
	T_and  shift 79
	T_or  shift 80
	T_plus  shift 81
	T_minus  shift 82
	T_times  shift 83
	T_mod  shift 84
	T_div  shift 85
	T_rbrack  reduce 77

	binary_operator  goto 86
	unary_assignment  goto 87
	binary_assignment  goto 88


state 47
	declarator : T_id T_lbrack constant_expression . T_rbrack  (20)

	T_rbrack  shift 89
	.  error


state 48
	expression : unary_operator . expression  (60)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 90
	unary_operator  goto 48
	unary_assignment  goto 49


state 49
	expression : unary_assignment . expression  (62)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 91
	unary_operator  goto 48
	unary_assignment  goto 49


state 50
	more_declarators_e : T_comma declarator .  (12)

	.  reduce 12


state 51
	variable_declaration : ctype declarator more_declarators_e T_semicolon .  (9)

	.  reduce 9


state 52
	more_declarators_e : more_declarators_e T_comma . declarator  (11)

	T_id  shift 19
	.  error

	declarator  goto 92


state 53
	parameter : T_byref . ctype T_id  (27)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	.  error

	ctype  goto 93
	basic_type  goto 13


state 54
	parameter : ctype . T_id  (28)

	T_id  shift 94
	.  error


state 55
	parameter_list : parameter_list . T_comma parameter  (25)
	parameter_list_e : parameter_list .  (30)

	T_comma  shift 95
	T_rparen  reduce 30


state 56
	parameter_list : parameter .  (26)

	.  reduce 26


state 57
	function_declaration : result_type T_id T_lparen parameter_list_e . T_rparen T_semicolon  (22)
	function_definition : result_type T_id T_lparen parameter_list_e . T_rparen T_lbrace declaration_list_e statement_list_e T_rbrace  (31)

	T_rparen  shift 96
	.  error


state 58
	expression : T_id T_lparen . expression_list_e T_rparen  (58)
	expression_list_e : .  (75)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	T_rparen  reduce 75

	expression  goto 97
	expression_list  goto 98
	expression_list_e  goto 99
	unary_operator  goto 48
	unary_assignment  goto 49


state 59
	result_type : ctype .  (23)

	.  reduce 23


state 60
	expression : T_lparen result_type . T_paren expression  (65)

	T_paren  shift 100
	.  error


state 61
	expression : T_lparen expression . T_rparen  (50)
	expression : expression . T_lbrack expression T_rbrack  (59)
	expression : expression . binary_operator expression  (61)
	expression : expression . unary_assignment  (63)
	expression : expression . binary_assignment expression  (64)
	expression : expression . T_qmark expression T_colon expression  (66)

	T_plu_assign  shift 64
	T_min_assign  shift 65
	T_mul_assign  shift 66
	T_div_assign  shift 67
	T_mod_assign  shift 68
	T_assign  shift 69
	T_incr  shift 36
	T_dcr  shift 37
	T_lteq  shift 70
	T_gteq  shift 71
	T_gt  shift 72
	T_lt  shift 73
	T_neq  shift 74
	T_eq  shift 75
	T_lbrack  shift 76
	T_rparen  shift 101
	T_comma  shift 77
	T_qmark  shift 78
	T_and  shift 79
	T_or  shift 80
	T_plus  shift 81
	T_minus  shift 82
	T_times  shift 83
	T_mod  shift 84
	T_div  shift 85
	.  error

	binary_operator  goto 86
	unary_assignment  goto 87
	binary_assignment  goto 88


62: shift/reduce conflict (shift 102, reduce 69) on T_lbrack
state 62
	expression : T_new result_type . array_expr_index_e  (67)
	array_expr_index_e : .  (69)

	T_lbrack  shift 102
	T_plu_assign  reduce 69
	T_min_assign  reduce 69
	T_mul_assign  reduce 69
	T_div_assign  reduce 69
	T_mod_assign  reduce 69
	T_assign  reduce 69
	T_incr  reduce 69
	T_dcr  reduce 69
	T_lteq  reduce 69
	T_gteq  reduce 69
	T_gt  reduce 69
	T_lt  reduce 69
	T_neq  reduce 69
	T_eq  reduce 69
	T_rbrack  reduce 69
	T_rparen  reduce 69
	T_colon  reduce 69
	T_semicolon  reduce 69
	T_comma  reduce 69
	T_qmark  reduce 69
	T_and  reduce 69
	T_or  reduce 69
	T_plus  reduce 69
	T_minus  reduce 69
	T_times  reduce 69
	T_mod  reduce 69
	T_div  reduce 69

	array_expr_index_e  goto 103


63: shift/reduce conflict (shift 64, reduce 68) on T_plu_assign
63: shift/reduce conflict (shift 65, reduce 68) on T_min_assign
63: shift/reduce conflict (shift 66, reduce 68) on T_mul_assign
63: shift/reduce conflict (shift 67, reduce 68) on T_div_assign
63: shift/reduce conflict (shift 68, reduce 68) on T_mod_assign
63: shift/reduce conflict (shift 69, reduce 68) on T_assign
63: shift/reduce conflict (shift 36, reduce 68) on T_incr
63: shift/reduce conflict (shift 37, reduce 68) on T_dcr
63: shift/reduce conflict (shift 70, reduce 68) on T_lteq
63: shift/reduce conflict (shift 71, reduce 68) on T_gteq
63: shift/reduce conflict (shift 72, reduce 68) on T_gt
63: shift/reduce conflict (shift 73, reduce 68) on T_lt
63: shift/reduce conflict (shift 74, reduce 68) on T_neq
63: shift/reduce conflict (shift 75, reduce 68) on T_eq
63: shift/reduce conflict (shift 76, reduce 68) on T_lbrack
63: shift/reduce conflict (shift 77, reduce 68) on T_comma
63: shift/reduce conflict (shift 78, reduce 68) on T_qmark
63: shift/reduce conflict (shift 79, reduce 68) on T_and
63: shift/reduce conflict (shift 80, reduce 68) on T_or
63: shift/reduce conflict (shift 81, reduce 68) on T_plus
63: shift/reduce conflict (shift 82, reduce 68) on T_minus
63: shift/reduce conflict (shift 83, reduce 68) on T_times
63: shift/reduce conflict (shift 84, reduce 68) on T_mod
63: shift/reduce conflict (shift 85, reduce 68) on T_div
state 63
	expression : expression . T_lbrack expression T_rbrack  (59)
	expression : expression . binary_operator expression  (61)
	expression : expression . unary_assignment  (63)
	expression : expression . binary_assignment expression  (64)
	expression : expression . T_qmark expression T_colon expression  (66)
	expression : T_delete expression .  (68)

	T_plu_assign  shift 64
	T_min_assign  shift 65
	T_mul_assign  shift 66
	T_div_assign  shift 67
	T_mod_assign  shift 68
	T_assign  shift 69
	T_incr  shift 36
	T_dcr  shift 37
	T_lteq  shift 70
	T_gteq  shift 71
	T_gt  shift 72
	T_lt  shift 73
	T_neq  shift 74
	T_eq  shift 75
	T_lbrack  shift 76
	T_comma  shift 77
	T_qmark  shift 78
	T_and  shift 79
	T_or  shift 80
	T_plus  shift 81
	T_minus  shift 82
	T_times  shift 83
	T_mod  shift 84
	T_div  shift 85
	T_rbrack  reduce 68
	T_rparen  reduce 68
	T_colon  reduce 68
	T_semicolon  reduce 68

	binary_operator  goto 86
	unary_assignment  goto 87
	binary_assignment  goto 88


state 64
	binary_assignment : T_plu_assign .  (103)

	.  reduce 103


state 65
	binary_assignment : T_min_assign .  (104)

	.  reduce 104


state 66
	binary_assignment : T_mul_assign .  (100)

	.  reduce 100


state 67
	binary_assignment : T_div_assign .  (101)

	.  reduce 101


state 68
	binary_assignment : T_mod_assign .  (102)

	.  reduce 102


state 69
	binary_assignment : T_assign .  (99)

	.  reduce 99


state 70
	binary_operator : T_lteq .  (90)

	.  reduce 90


state 71
	binary_operator : T_gteq .  (91)

	.  reduce 91


state 72
	binary_operator : T_gt .  (89)

	.  reduce 89


state 73
	binary_operator : T_lt .  (88)

	.  reduce 88


state 74
	binary_operator : T_neq .  (93)

	.  reduce 93


state 75
	binary_operator : T_eq .  (92)

	.  reduce 92


state 76
	expression : expression T_lbrack . expression T_rbrack  (59)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 104
	unary_operator  goto 48
	unary_assignment  goto 49


state 77
	binary_operator : T_comma .  (96)

	.  reduce 96


state 78
	expression : expression T_qmark . expression T_colon expression  (66)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 105
	unary_operator  goto 48
	unary_assignment  goto 49


state 79
	binary_operator : T_and .  (94)

	.  reduce 94


state 80
	binary_operator : T_or .  (95)

	.  reduce 95


state 81
	binary_operator : T_plus .  (86)

	.  reduce 86


state 82
	binary_operator : T_minus .  (87)

	.  reduce 87


state 83
	binary_operator : T_times .  (83)

	.  reduce 83


state 84
	binary_operator : T_mod .  (85)

	.  reduce 85


state 85
	binary_operator : T_div .  (84)

	.  reduce 84


state 86
	expression : expression binary_operator . expression  (61)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 106
	unary_operator  goto 48
	unary_assignment  goto 49


state 87
	expression : expression unary_assignment .  (63)

	.  reduce 63


state 88
	expression : expression binary_assignment . expression  (64)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 107
	unary_operator  goto 48
	unary_assignment  goto 49


state 89
	declarator : T_id T_lbrack constant_expression T_rbrack .  (20)

	.  reduce 20


90: shift/reduce conflict (shift 76, reduce 60) on T_lbrack
90: shift/reduce conflict (shift 78, reduce 60) on T_qmark
90: shift/reduce conflict (shift 84, reduce 60) on T_mod
state 90
	expression : expression . T_lbrack expression T_rbrack  (59)
	expression : unary_operator expression .  (60)
	expression : expression . binary_operator expression  (61)
	expression : expression . unary_assignment  (63)
	expression : expression . binary_assignment expression  (64)
	expression : expression . T_qmark expression T_colon expression  (66)

	T_incr  shift 36
	T_dcr  shift 37
	T_lbrack  shift 76
	T_qmark  shift 78
	T_mod  shift 84
	T_plu_assign  reduce 60
	T_min_assign  reduce 60
	T_mul_assign  reduce 60
	T_div_assign  reduce 60
	T_mod_assign  reduce 60
	T_assign  reduce 60
	T_lteq  reduce 60
	T_gteq  reduce 60
	T_gt  reduce 60
	T_lt  reduce 60
	T_neq  reduce 60
	T_eq  reduce 60
	T_rbrack  reduce 60
	T_rparen  reduce 60
	T_colon  reduce 60
	T_semicolon  reduce 60
	T_comma  reduce 60
	T_and  reduce 60
	T_or  reduce 60
	T_plus  reduce 60
	T_minus  reduce 60
	T_times  reduce 60
	T_div  reduce 60

	binary_operator  goto 86
	unary_assignment  goto 87
	binary_assignment  goto 88


91: shift/reduce conflict (shift 64, reduce 62) on T_plu_assign
91: shift/reduce conflict (shift 65, reduce 62) on T_min_assign
91: shift/reduce conflict (shift 66, reduce 62) on T_mul_assign
91: shift/reduce conflict (shift 67, reduce 62) on T_div_assign
91: shift/reduce conflict (shift 68, reduce 62) on T_mod_assign
91: shift/reduce conflict (shift 69, reduce 62) on T_assign
91: shift/reduce conflict (shift 36, reduce 62) on T_incr
91: shift/reduce conflict (shift 37, reduce 62) on T_dcr
91: shift/reduce conflict (shift 70, reduce 62) on T_lteq
91: shift/reduce conflict (shift 71, reduce 62) on T_gteq
91: shift/reduce conflict (shift 72, reduce 62) on T_gt
91: shift/reduce conflict (shift 73, reduce 62) on T_lt
91: shift/reduce conflict (shift 74, reduce 62) on T_neq
91: shift/reduce conflict (shift 75, reduce 62) on T_eq
91: shift/reduce conflict (shift 76, reduce 62) on T_lbrack
91: shift/reduce conflict (shift 77, reduce 62) on T_comma
91: shift/reduce conflict (shift 78, reduce 62) on T_qmark
91: shift/reduce conflict (shift 79, reduce 62) on T_and
91: shift/reduce conflict (shift 80, reduce 62) on T_or
91: shift/reduce conflict (shift 81, reduce 62) on T_plus
91: shift/reduce conflict (shift 82, reduce 62) on T_minus
91: shift/reduce conflict (shift 83, reduce 62) on T_times
91: shift/reduce conflict (shift 84, reduce 62) on T_mod
91: shift/reduce conflict (shift 85, reduce 62) on T_div
state 91
	expression : expression . T_lbrack expression T_rbrack  (59)
	expression : expression . binary_operator expression  (61)
	expression : unary_assignment expression .  (62)
	expression : expression . unary_assignment  (63)
	expression : expression . binary_assignment expression  (64)
	expression : expression . T_qmark expression T_colon expression  (66)

	T_plu_assign  shift 64
	T_min_assign  shift 65
	T_mul_assign  shift 66
	T_div_assign  shift 67
	T_mod_assign  shift 68
	T_assign  shift 69
	T_incr  shift 36
	T_dcr  shift 37
	T_lteq  shift 70
	T_gteq  shift 71
	T_gt  shift 72
	T_lt  shift 73
	T_neq  shift 74
	T_eq  shift 75
	T_lbrack  shift 76
	T_comma  shift 77
	T_qmark  shift 78
	T_and  shift 79
	T_or  shift 80
	T_plus  shift 81
	T_minus  shift 82
	T_times  shift 83
	T_mod  shift 84
	T_div  shift 85
	T_rbrack  reduce 62
	T_rparen  reduce 62
	T_colon  reduce 62
	T_semicolon  reduce 62

	binary_operator  goto 86
	unary_assignment  goto 87
	binary_assignment  goto 88


state 92
	more_declarators_e : more_declarators_e T_comma declarator .  (11)

	.  reduce 11


state 93
	parameter : T_byref ctype . T_id  (27)

	T_id  shift 108
	.  error


state 94
	parameter : ctype T_id .  (28)

	.  reduce 28


state 95
	parameter_list : parameter_list T_comma . parameter  (25)

	T_int  shift 3
	T_double  shift 4
	T_bool  shift 5
	T_char  shift 6
	T_byref  shift 53
	.  error

	ctype  goto 54
	basic_type  goto 13
	parameter  goto 109


state 96
	function_declaration : result_type T_id T_lparen parameter_list_e T_rparen . T_semicolon  (22)
	function_definition : result_type T_id T_lparen parameter_list_e T_rparen . T_lbrace declaration_list_e statement_list_e T_rbrace  (31)

	T_lbrace  shift 110
	T_semicolon  shift 111
	.  error


97: shift/reduce conflict (shift 77, reduce 74) on T_comma
state 97
	expression : expression . T_lbrack expression T_rbrack  (59)
	expression : expression . binary_operator expression  (61)
	expression : expression . unary_assignment  (63)
	expression : expression . binary_assignment expression  (64)
	expression : expression . T_qmark expression T_colon expression  (66)
	expression_list : expression .  (74)

	T_plu_assign  shift 64
	T_min_assign  shift 65
	T_mul_assign  shift 66
	T_div_assign  shift 67
	T_mod_assign  shift 68
	T_assign  shift 69
	T_incr  shift 36
	T_dcr  shift 37
	T_lteq  shift 70
	T_gteq  shift 71
	T_gt  shift 72
	T_lt  shift 73
	T_neq  shift 74
	T_eq  shift 75
	T_lbrack  shift 76
	T_comma  shift 77
	T_qmark  shift 78
	T_and  shift 79
	T_or  shift 80
	T_plus  shift 81
	T_minus  shift 82
	T_times  shift 83
	T_mod  shift 84
	T_div  shift 85
	T_rparen  reduce 74

	binary_operator  goto 86
	unary_assignment  goto 87
	binary_assignment  goto 88


state 98
	expression_list : expression_list . T_comma expression  (73)
	expression_list_e : expression_list .  (76)

	T_comma  shift 112
	T_rparen  reduce 76


state 99
	expression : T_id T_lparen expression_list_e . T_rparen  (58)

	T_rparen  shift 113
	.  error


state 100
	expression : T_lparen result_type T_paren . expression  (65)

	T_id  shift 28
	T_string  shift 29
	T_char_const  shift 30
	T_int_const  shift 31
	T_double_const  shift 32
	T_true  shift 33
	T_false  shift 34
	T_null  shift 35
	T_incr  shift 36
	T_dcr  shift 37
	T_lparen  shift 38
	T_negate  shift 39
	T_plus  shift 40
	T_minus  shift 41
	T_times  shift 42
	T_addr  shift 43
	T_new  shift 44
	T_delete  shift 45
	.  error

	expression  goto 114
	unary_operator  goto 48
	unary_assignment  goto 49


state 101
	expression : T_lparen expression T_rparen .  (50)

	.  reduce 50

